# reconf

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  lib.rs  main.rs
crates/cli/src/repl/: eval.rs  highlighter.rs  mod.rs  semantic.rs  session.rs  theme.rs  validator.rs
crates/cli/tests/: cli.rs  diagnostic_fixtures.rs  repl.rs
crates/compiler/: Cargo.toml
crates/core/: Cargo.toml
crates/wasm/: Cargo.toml
doc/: DESIGN.md  DRAFT.md  MVP.md  REFACTOR_NOTES.md  RELEASE_CHECKLIST.md  ROADMAP_STATUS.md  WASM.md  reconf_implementation_proposal_roadmap.md
examples/: simple.json  simple.reconf
examples/modules/: lib.reconf  main.json  main.reconf
src/: ast.rs  cli.rs  compiler.rs  diagnostic.rs  emit.rs  error.rs  eval.rs  lib.rs  main.rs  parser.rs  prelude.reconf  prelude.rs  repl.rs  source.rs  syntax.rs  typeck.rs
src/compiler/: front.rs  loader.rs  module.rs  output.rs  pipeline.rs  prelude.rs  session.rs
src/core/: ast.rs  pretty.rs  types.rs
src/emit/: json.rs  mod.rs  reconf.rs
src/eval/: builtins.rs  core.rs  mod.rs  prelude.reconf  prelude.rs
src/lower/: desugar.rs  mod.rs
src/refine/: validate.rs
src/repl/: diagnostics.rs  eval.rs  highlighter.rs  mod.rs  theme.rs  (+5 more)
tests/: builtins.rs  cli.rs  compiler.rs  core_elaboration.rs  core_evaluator.rs  core_refinement.rs  core_types.rs  determinism.rs  diagnostics.rs  elaborate_core.rs  emitters.rs  evaluator.rs  fixtures.rs  language.rs  lower_core.rs  repl.rs  resolved.rs
web/: index.html  package-lock.json  package.json  vite.config.js
(+140 files in other folders)
