[package]
name = "reconf"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.6", features = ["fancy", "syntect-highlighter"] }
nu-ansi-term = "0.50"
pest = "2.7"
pest_derive = "2.7"
reedline = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5.3", features = ["plist-load"] }
thiserror = "2.0"
