[workspace]
members = [
    "crates/core",
    "crates/compiler",
    "crates/cli",
    "crates/wasm",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.6", features = ["fancy", "syntect-highlighter"] }
nu-ansi-term = "0.50"
pest = "2.7"
pest_derive = "2.7"
reedline = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5.3", features = ["plist-load"] }
thiserror = "2.0"
reconf-core = { path = "crates/core" }
reconf-compiler = { path = "crates/compiler" }
