[package]
name = "reconf-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reconf"
path = "src/main.rs"

[dependencies]
clap.workspace = true
miette.workspace = true
nu-ansi-term.workspace = true
reconf-compiler.workspace = true
reconf-core.workspace = true
reedline.workspace = true
serde_json.workspace = true
syntect.workspace = true

[dev-dependencies]
reconf-core.workspace = true
